--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj
@@ -152,13 +152,17 @@
   <ItemGroup>
     <ClCompile Include="ClockTests.cpp" />
     <ClCompile Include="FftccTest.cpp" />
-    <CudaCompile Include="GPUutils_test.cu">
-      <FileType>CppCode</FileType>
-    </CudaCompile>
+    <ClCompile Include="GPUutils_test.cpp" />
     <ClCompile Include="gtest-all.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemAllocatorTest.cpp" />
     <ClCompile Include="Other_Test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="GPUThrust.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GPUThrust.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
