--- a/TW/TW_Core/TW_Core.vcxproj.filters
+++ b/TW/TW_Core/TW_Core.vcxproj.filters
@@ -116,6 +116,15 @@
     <ClCompile Include="GeneratedFiles\Release\moc_fftcctworkerthread.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="glcanvas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_glcanvas.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_glcanvas.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="tw_coremainwindow.h">
@@ -154,6 +163,12 @@
     <CustomBuild Include="fftcctworkerthread.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="glcanvas.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="glcanvas.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_tw_coremainwindow.h">
@@ -173,6 +188,9 @@
     </ClInclude>
     <ClInclude Include="cuda_utils.cuh">
       <Filter>CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_glcanvas.h">
+      <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
