TW_Core: 1.Shared openGL Context between threads successfully got proved. 2.Add sharedResource singleton class to TW_Core. TODO: finish all the staff of display
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C182

--- a/TW/TW_Core/TW_Core.vcxproj.filters
+++ b/TW/TW_Core/TW_Core.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClCompile Include="GeneratedFiles\Release\moc_fftcctworkerthread.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="Structures.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="tw_coremainwindow.h">
