--- a/TW/TW_Core/TW_Core.vcxproj
+++ b/TW/TW_Core/TW_Core.vcxproj
@@ -232,6 +232,7 @@
     </ClCompile>
     <ClCompile Include="glwidget.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Structures.cpp" />
     <ClCompile Include="tw_coremainwindow.cpp" />
   </ItemGroup>
   <ItemGroup>
