TW_Engine: Gradient & BSpline interpolation partially done and tested. Ready for the use of ICGN
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C192

--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="FftccTest.cpp" />
     <ClCompile Include="GPUutils_test.cpp" />
     <ClCompile Include="gtest-all.cpp" />
+    <ClCompile Include="icgnTest.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemAllocatorTest.cpp" />
     <ClCompile Include="Other_Test.cpp" />
