--- a/TW/TW_Engine/TW_Engine.vcxproj
+++ b/TW/TW_Engine/TW_Engine.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="TW_MatToQImage.cpp" />
     <ClCompile Include="TW_paDIC_FFTCC2D.cpp" />
     <ClCompile Include="TW_MemManager.cpp" />
+    <ClCompile Include="TW_paDIC_ICGN2D.cpp" />
     <ClCompile Include="TW_StopWatch.cpp" />
     <ClCompile Include="TW_utils.cpp" />
   </ItemGroup>
@@ -167,6 +168,7 @@
     <ClInclude Include="TW_paDIC_cuFFTCC2D.h" />
     <ClInclude Include="TW_paDIC_FFTCC2D.h" />
     <ClInclude Include="TW_MemManager.h" />
+    <ClInclude Include="TW_paDIC_ICGN2D.h" />
     <ClInclude Include="TW_StopWatch.h" />
     <ClInclude Include="TW_utils.h" />
   </ItemGroup>
