--- a/TW/TW_Core/TW_Core.vcxproj.filters
+++ b/TW/TW_Core/TW_Core.vcxproj.filters
@@ -116,6 +116,15 @@
     <ClCompile Include="GeneratedFiles\Release\moc_fftcctworkerthread.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="iccgnworkerthread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_iccgnworkerthread.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_iccgnworkerthread.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="tw_coremainwindow.h">
@@ -156,6 +165,9 @@
     </CustomBuild>
     <CustomBuild Include="glwidget.ui">
       <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="iccgnworkerthread.h">
+      <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
